--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.9.0
   gap: ^3.0.1
+  font_awesome_flutter: ^10.7.0
+  fpdart: ^1.1.0
+  supabase_flutter: ^2.3.4
+  flutter_dotenv: ^5.1.0
+  flutter_riverpod: ^2.4.10
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +68,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/logos/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
